# bevy_prototype_inline_assets

./: Cargo.toml  README.md
src/: lib.rs
