[package]
name = "bevy_prototype_inline_assets"
description = "Bevy plugin for loading assets that are bundled into the binary."
version = "0.1.1"
authors = ["Eitan Mosenkis <eitan@mosenkis.net>"]
edition = "2018"
license = "MIT"
license_file = "LICENSE"
repository = "https://github.com/emosenkis/bevy_prototype_inline_assets"

[dependencies]
bevy_app = "0.3.0"
bevy_asset = "0.3.0"
bevy_ecs = "0.3.0"
bevy_tasks = "0.3.0"
bevy_utils = "0.3.0"
futures = { version = "0.3", default_features = false }
