[package]
name = "bevy_prototype_inline_assets"
description = "Bevy plugin for loading assets that are bundled into the binary."
version = "0.2.0"
authors = ["Eitan Mosenkis <eitan@mosenkis.net>"]
edition = "2021"
license = "MIT"
license_file = "LICENSE"
repository = "https://github.com/emosenkis/bevy_prototype_inline_assets"

[dependencies]
bevy = "0.6.1"
futures = "0.3.21"
